--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "next": "15.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.1"
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
